# Detection-Of-Violations-And-Harm-D.O.V.A.H

./: .dockerignore  .env  .env.docker  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  constraints.txt  docker-compose.yml  drain3.ini  env.example  environment.yml  parsed_log.schema.json  pyproject.toml  pytest.ini  requirements.txt  streamlit_app.py
.github/workflows/: ci-smokes.yml  phase3.yml
alembic/: env.py
alembic/versions/: 000_enable_extensions.py  001_add_window_features.py  002_add_required_tables.py
assets/: styles.css
data/processed/: parced_logs_20250831_225916.json  parsed_logs_20250831_225916.json  parsed_logs_20250831_230814.json
data/security/: kev_entries.csv
data/test/: labels.jsonl
db/migrations/: 0001_create_hdfs_logs.sql
docs/: STEP_1_CREATE_TABLE.md  STEP_1_TROUBLESHOOT.md  command_reference.md  data_card.md  runbook_day2.md  sessionization.md
eda_results/: latency_stats.csv  latency_stats_sliding.csv
notebooks/: 01_data_exploration.ipynb  01_data_exploration.py  eda_hdfs.ipynb  eda_hdfs.py  eda_script.py
pages/: 02_Alerts.py  03_Drift.py  about.py
pages/pages/: 02_Alerts.py
reports/eda/: distribution_stats.json  spike_stats.json  template_stats.json
sample_data/: README.md
sample_data/hdfs/: sample.txt
scripts/: build_fusion.sh  calibrate_thresholds.py  db_apply.sh  db_doctor.sh  db_doctor_plain.sh  db_driver_check.py  db_verify.sh  generate_metrics_artifacts.py  prep_day4.py  prepare_day4_data.py  smoke_iforest.py  smoke_imports.py
scripts/scripts/: prepare_day4_data.pyprepare_day4_data.py
src/analysis/: anomaly.py  correlation.py  drift.py  run_analysis.py  summarize_latency.py  threat_score.py  validate.py
src/common/: db.py  pseudo.py
src/db/: __init__.py  models.py
src/enrich/: cve_context.py  cve_join.py  cve_pipeline.py  nvd_fetch.py  rolling_stats.py
src/eval/: adaptive_drift.py  drift.py  e2e_p95.py  metrics.py  psi.py  run_eval.py  run_harness.py  run_split_eval.py  split_data.py
src/fusion/: late_fusion.py
src/genai/: summarize_alert.py
src/ingest/: dedup.py  epss_fetch.py  hdfs_loader.py  kev_fetch.py  pipeline.py  scrub.py  session.py  template_cache.py  template_extract.py
src/integrations/: export_json.py
src/models/: baselines.py  late_fusion.py  score.py
src/notebooks/: 01_data_exploration.py  eda_hdfs.py
src/schemas/: detections.schema.json  parsed_log.schema.json
src/stream/: features.py  job.py  parsed_log.schema.json  replay.py
src/xai/: shap_explain.py
tests/: calculate_p95.py  conftest.py  run_pipeline.py  test_cve.py  test_cve_enrichment.py  test_cve_pipeline.py  test_dedup.py  test_drift.py  test_pii.py  test_pipeline.py  test_schema.py  test_session.py  test_template.py  test_template_cache.py
tests/analysis/: test_anomaly.py  test_correlation.py  test_distribution.py  test_threat_score.py
tests/eval/: test_adaptive_drift.py
tests/fusion/: test_late_fusion.py
tests/genai/: test_summarize_alert.py
tests/ingest/: test_cli.py  test_hdfs_loader.py  test_pii_ingest.py  test_template_extract.py
tests/integrations/: test_export_json.py
tests/models/: test_baselines.py  test_score.py
tests/stream/: test_features.py  test_job.py
utils/: UI.py  db.py  ui.py
(+10 files in other folders)
