[tool.poetry]
name = "dovah"
version = "0.1.0"
description = "DOVAH - Detection of Violation and Harm: Cloud-agnostic streaming security ML platform"
authors = ["NATIA-CYBER <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
# Core ML & Data Processing
numpy = "^1.24.0"
pandas = "^2.0.0"
scikit-learn = "^1.3.0"
torch = "^2.0.0"
shap = "^0.42.0"

# Stream Processing
apache-flink = "^1.17.0"
boto3 = "^1.28.0"
apache-flink-libraries = "^1.17.0"

# Database & Storage
psycopg2-binary = "^2.9.9"
alembic = "^1.12.0"
pgvector = "^0.2.0"

# Schema & Validation
pydantic = "^2.4.0"
jsonschema = "^4.19.0"

# Security & Privacy
cryptography = "^41.0.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}

# Configuration & Environment
python-dotenv = "^1.0.0"
dynaconf = "^3.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
ruff = "^0.0.287"
mypy = "^1.5.0"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
select = ["E", "F", "B", "I"]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
