[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dovah-internal"
version = "0.1.0"
requires-python = ">=3.11"
description = "DOVAH internal package (installs 'src' as a package so imports like 'from src.*' work)"
readme = "README.md"

# CLI entry points (keep only those that actually exist)
[project.scripts]
dovah-features = "src.cli.features_main:main"
dovah-producer = "src.cli.producer_main:main"
dovah-infer    = "src.cli.infer_main:main"
dovah-fusion   = "src.cli.fusion_main:main"
dovah-enrich   = "src.cli.enrich_main:main"
dovah-evidence = "src.cli.evidence_main:main"
dovah-bench    = "src.cli.bench_main:main"

[tool.setuptools]
# KEY: install a top-level package literally named "src"
packages = ["src"]
package-dir = { "src" = "src" }

[tool.setuptools.package-data]
"*" = ["*.json", "*.ini", "*.csv"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E","F","I","B","UP","W","C90"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
no_implicit_optional = true
strict_equality = true
check_untyped_defs = true
pretty = true
